<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/transparent_half"
    >
    <com.youth.banner.Banner
        android:id="@+id/banner"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/ic_launcher_background" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        >
        <TextView
            android:id="@+id/tv_home_consultation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/zixun_top"
            android:text="@string/home_consulting"
            android:textSize="11sp"
            android:textColor="@color/textColor_33"
            android:gravity="center"
            android:drawablePadding="10dp"
            android:layout_weight="1"
            />
        <TextView
            android:id="@+id/tv_home_complaint"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/home_icon_qisuzhuang"
            android:text="@string/home_complaint"
            android:textSize="11sp"
            android:textColor="@color/textColor_33"
            android:gravity="center"
            android:drawablePadding="10dp"
            android:layout_weight="1"
            />
        <TextView
            android:id="@+id/tv_home_open_court_assistant"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/home_icon_zhushou"
            android:text="@string/home_courtassistant"
            android:textSize="11sp"
            android:textColor="@color/textColor_33"
            android:gravity="center"
            android:drawablePadding="10dp"
            android:layout_weight="1"
            />
        <TextView
            android:id="@+id/id_tv_home_legal_counsel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/home_icon_guwen"
            android:text="@string/home_legaladviser"
            android:textSize="11sp"
            android:textColor="@color/textColor_33"
            android:gravity="center"
            android:drawablePadding="10dp"
            android:layout_weight="1"
            />
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:drawableLeft="@drawable/yuanjiaozx"
        android:drawablePadding="5dp"
        android:text="@string/home_recommended_lawyer"
        android:textColor="@color/textColor_37"
        android:textSize="14sp" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/transparent_f2"
        android:layout_marginTop="20dp"
        />
</LinearLayout>